# yet-another-smalltalk-vm

./: .gdbinit  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  main.c  test
benchmarks/: DeltaBlue.st  Richards.st
linenoise/: linenoise.h
smalltalk/: Assert.st  AssertError.st  Behavior.st  Block.st  BlockContext.st  Boolean.st  Class.st  ClassDescription.st  CompiledBlock.st  CompiledCode.st  CompiledMethod.st  Context.st  ContextCopy.st  Debugger.st  Error.st  Exception.st  ExceptionHandler.st  False.st  FileSourceCode.st  GarbageCollector.st  IoError.st  Iterator.st  Message.st  MessageNotUnderstood.st  MetaClass.st  MethodContext.st  NotFoundError.st  Object.st  OutOfRangeError.st  Repl.st  ShouldNotImplement.st  SourceCode.st  SubClassResponsibility.st  True.st  TypeFeedback.st  UndefinedObject.st  VMTools.st
tests/: ArrayTest.st  BehaviorTest.st  BlockTest.st  CharacterTest.st  CollectionStreamTest.st  CompilerTest.st  CompilerTestFile.st  ExceptionTest.st  NumberTest.st  ObjectTest.st  OrderedCollectionTest.st  OuterReturnTest.st  ParserTest.st  RegAllocTest.st  SmallIntegerTest.st  StreamViewTest.st  StringTest.st  UndefinedObjectTest.st
vm/: Assembler.h  AssemblerX64.h  Assert.h  Ast.h  Bootstrap.c  Bootstrap.h  Bytecodes.h  Class.c  Class.h  Cli.h  CodeDescriptors.h  CodeGenerator.h  CodeGeneratorX64.c  Collection.c  Collection.h  CompiledCode.c  CompiledCode.h  Compiler.c  Compiler.h  Dictionary.c  Dictionary.h  Entry.c  Entry.h  Exception.c  Exception.h  FreeList.c  FreeList.h  GarbageCollector.c  GarbageCollector.h  Handle.c  Handle.h  (+48 more)
(+59 files in other folders)
